--- a/Responsive Web Design/8_Responsive Web Design Projects/2_Build a Survey Form/Build_Survey_Form_for_Tourism.css
+++ b/Responsive Web Design/8_Responsive Web Design Projects/2_Build a Survey Form/Build_Survey_Form_for_Tourism.css
@@ -147,7 +147,7 @@ form {
 .input-radio, .input-checkbox {
   display: inline-block;
   margin-right: 0.625rem;
-  margin-height: 1.25rem;
+  min-height: 1.25rem;
   min-width: 1.25rem; 
 }
 
@@ -159,7 +159,7 @@ form {
 }
 
 .submit {
-  dispaly: block;
+  display: block;
   width: 100%;
   padding: 0.75rem;
   background-color: var(--color-fade-blue);
