--- a/Responsive Web Design/8_Responsive Web Design Projects/4_Build a Technical Documentation Page/JS_Technical_Documentation_FCC.css
+++ b/Responsive Web Design/8_Responsive Web Design Projects/4_Build a Technical Documentation Page/JS_Technical_Documentation_FCC.css
@@ -14,7 +14,10 @@ body {
   color: transparent;
   -webkit-background-clip: text;  
   animation: move 1s infinite;
-  
+}
+
+.gradient {
+  font-family: 'Pacifico', cursive; 
 }
 
 @keyframes move {
@@ -39,7 +42,7 @@ header {
   margin: 10px;
   font-size: 1.8em;
   text-align: center;
-  font-family: 'Pacifico', cursive; 
+/*   font-family: 'Pacifico', cursive;  */
 }
 
 #main-doc header {
